# acbotics_interface

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  build_docker.sh  dist_setup_headless.sh  get_version_tag.sh  pyproject.toml
.github/workflows/: build-test.yml  cmake-build_amd.yml  cmake-build_arm.yml  python-package.yml
docker/: debian_bookworm.dockerfile  debian_trixie.dockerfile  ubuntu2204.dockerfile  ubuntu2404.dockerfile
examples/: basic_socket_client.py
src/: CMakeLists.txt
src/acbotics_interface/data_containers/: data_container.py  data_container_angle_list.py  data_container_beamformed_output_1d.py  data_container_beamformed_output_2d.py  data_container_beamformed_output_raw.py  data_container_constant_rate.py  data_container_nav.py  data_container_status.py
src/acbotics_interface/protocols/: __init__.py  udp_beamform_2d_protocol.py  udp_beamform_raw_protocol.py  udp_data_protocol.py  udp_external_nav_protocol.py  udp_nav_protocol.py  udp_status_protocol.py
src/acbotics_interface/scripts/: spoof_udp.py
src/apps/: CMakeLists.txt  csv_logger.cpp
src/ipc_protocols/: IpcBnoState.cpp  IpcBnoState.h  IpcData.cpp  IpcData.h  IpcDetector.cpp  IpcDetector.h  IpcFFT.cpp  IpcFFT.h
src/python/: CMakeLists.txt  _acsense_types.cpp  _ipc_protocol.cpp  _preliminaries.cpp  _udp_protocol.cpp  _utils.cpp  acbotics_interface.cpp  pybind11
src/python/scripts/: run_py_tests.py  simple_getter_test.py  simple_getter_test_2_sockets.py
src/tests/: CMakeLists.txt  run_tests.cpp  tests.cpp  tests.h
src/udp_protocols/: UdpAcousticData.cpp  UdpAcousticData.h  UdpBeamform2D.cpp  UdpBeamform2D.h  UdpBeamformRaw.cpp  UdpBeamformRaw.h  UdpBnoData.cpp  UdpBnoData.h  UdpBnrData.cpp  UdpBnrData.h  UdpData.cpp  UdpData.h  UdpEptData.cpp  UdpEptData.h  UdpImuData.cpp  UdpImuData.h  UdpPtsData.cpp  UdpPtsData.h  UdpRtcData.cpp  UdpRtcData.h
src/utils/: EnergyDetector.cpp  EnergyDetector.h  FFT.cpp  FFT.h  FreqDomainBase.cpp  FreqDomainBase.h  InterfaceHelper.cpp  InterfaceHelper.h  InterfaceHelper_buffering.cpp  InterfaceHelper_logging_aco.cpp  InterfaceHelper_logging_gps.cpp  LoggerBlock.cpp  LoggerBlock.h  Logger_Acoustic.cpp  Logger_Acoustic.h  Logger_GPS_Host.cpp  Logger_GPS_Host.h  Logger_Sensor.cpp  Logger_Sensor.h  QueueClient.h  Types.h  UdpSocketIn.cpp  UdpSocketIn.h  log_filename_time.cpp  log_filename_time.h  thread_safe_queue.h
tests/: test_data_container_constant_rate.py
